# study-crate

./: .gitignore  Cargo.toml
src/: collections.rs  exceptions.rs  generics.rs  lib.rs  limits.rs  main.rs  prepackages.rs
src/collections/: bs.rs  exercises.rs  hashmaps.rs  mod.rs  strings.rs  vectors.rs
src/concurrent/: channel.rs  classic.rs  lock.rs  mod.rs
src/fp/: closures.rs  mod.rs  patterns.rs
src/generics/: functions.rs  lifetimes.rs  mod.rs  traits.rs
src/oop/: mod.rs  rust_states_lib.rs  states.rs  structs.rs
src/pointers/: smart.rs
src/prepackages/: enums.rs  gg.rs  mod.rs  ownership.rs  structs.rs  variables.rs
src/prepackages/enums/: enums.rs  matching.rs  options.rs
src/util/: might.rs
tests/: typical_integration_test.rs
